Add section discussing micro-payments
This section introduces the discussion that micro-payments could be used
to the bennefit of creators and artists.

--- a/sections/05-evaluation.tex
+++ b/sections/05-evaluation.tex
@@ -82,9 +82,17 @@ For SAFE Wiki, this means that once a user pays to upload something like Wikiped
  
 \subsection{Alternative Business Models}
 
-Like any new technology, the SAFE Network opens up many opportunities that didn't exist before. In SAFE Network nomenclature, \textit{vaults} farm data. The safe and reliable storage (farming) of data is rewarded with \textit{Safecoin}. One could envision an application that instead of charging users for access, allows them to become a \textit{vault} that generates \textit{Safecoin}. This \textit{Safecoin} could then be sent back to the creators of the program and hence financially compensates them for the usage of their application. One consideration of this approach however is that \textit{vaults} don't get to choose what data they store, that is an integral part of the architecture of the SAFE Network. By following this financial model then it would be for the ``good of the whole'', increasing the utility of the entire network and not just for one application.
+Like any new technology, the SAFE Network opens up many opportunities that didn't exist before. In SAFE Network nomenclature, \textit{vaults} farm data. The safe and reliable storage (farming) of data is rewarded with \textit{Safecoin}. 
+
+\subsubsection{Exploiting Consumer Resources}
+
+One could envision an application that instead of charging users for access, allows them to become a \textit{vault} that generates \textit{Safecoin}. This \textit{Safecoin} could then be sent back to the creators of the program and hence financially compensates them for the usage of their application. One consideration of this approach however is that \textit{vaults} don't get to choose what data they store, that is an integral part of the architecture of the SAFE Network. By following this financial model then it would be for the ``good of the whole'', increasing the utility of the entire network and not just for one application.
 
 This model could be used to better make use of a consumers resources. When a user sits and watches Netflix on an entertainment system, there is very little strain on the resources of the device. In the case of a games console, literally teraflops of processing power, advanced networking and storage facilities are going unused. Potential financial models can try to \textit{exploit} this untapped power to the benefit of both the user and the provider of the application. Encouraging the creation of more \textit{vaults} not only increases the utility of the SAFE Network but provides users with an entirely new way to pay for content. Offering the resources they have in exchange for access to services.
+
+\subsubsection{Micro-Payments}
+
+As \textit{Safecoin} is so tightly integrated with the network it can be used in interesting ways. A possibility talked about in the \textit{Safecoin} white-paper\cite{lambert2015safecoin} is the facilitation of micro-payments. Traditional currencies and payment processing methods are too expensive to be used for quick and small payments, hence why many merchants will charge a fee to use a card machine. This issue does not exist for \textit{Safecoin} which means it can be used to facilitate small payments. To give an example, a music artist could upload their discography to the SAFE Network and link their wallet to the files via some mechanism. As users listen to the song (read the chunks from the network), \textit{Safecoin} could be sent from their wallet(s) dynamically based upon their consumption of the music. As the white-paper suggests, this could even be used ``to pay for films on a cost per frame basis, with the user only paying for what they watch''. By using this system, artists and creators could cut out the ``middle-man'' for users consuming their content. If the financial benefits are significant then they may be drawn to the SAFE Network over alternative platforms like Spotify. Current platforms usually take a significant cut of profits so it may indeed result in higher revenue for them. How profitable a system like this would be remains to be seen. When Maidsafe gives a formal outline of how micro-payments will be implemented it will then be possible to examine if they will benefit creators.
 
 \subsection{Privacy and Anonymity}
 
