Read through Chapter 1

--- a/sections/01-introduction.tex
+++ b/sections/01-introduction.tex
@@ -2,31 +2,30 @@
 \pagenumbering{arabic}
 
 \begin{displayquote}
-The SAFE Network is a decentralised data storage and communications network that provides a secure, efficient
-and low-cost infrastructure for everyone \cite{safenetwork}.
+The SAFE Network is a decentralised data storage and communications network that provides a secure, efficient and low-cost infrastructure for everyone \cite{safenetwork}.
 \end{displayquote}
 
 \section{The SAFE Network}
 
-The SAFE Network \cite{safenetwork} is an open-source project being developed by a company in Scotland called Maidsafe \cite{maidsafe}. Their aim is to build "The World's First Autonomous Data Network". An `Autonomous Data Network' in simple terms is "...a network that manages all our data and communications without any human intervention and without intermediaries" \cite{autonomous-data-networks}. The network is comprised of \textit{vaults}. A \textit{vault} is a simple program that anyone can run on their computer. Together, all the vaults that comprise the SAFE Network work together to store and serve data. As anyone can run a \textit{vault}, the network (which again works autonomously) stores data in a decentralised manner. Owners of \textit{vaults} are compensated for their computers resources, which encourages more \textit{vaults} to join the network. Increasing its reliability, storage capacity and performance. A global network that facilitates the decentralised, highly redundant and secure storage of data creates exciting new opportunities for developers.
+The SAFE Network\footnote{https://safenetwork.org} is an open-source project being developed by a company in Scotland called Maidsafe\footnote{https://maidsafe.net}. Their aim is to build ``The World's First Autonomous Data Network''. An ``Autonomous Data Network'' in simple terms is ``...a network that manages all our data and communications without any human intervention and without intermediaries'' \cite{autonomous-data-networks}. The network is comprised of \textit{vaults}. A \textit{vault} is a simple program that anyone can run on their computer. Together, all the \textit{vaults} that comprise the SAFE Network work together to store and serve data. As anyone can run a \textit{vault}, the network can store and serve data in a decentralised manner. Owners of \textit{vaults} are compensated with a cryptocurrency called \textit{Safecoin} which encourages more \textit{vaults} to join the network. A global network that facilitates the decentralised, highly redundant and secure storage of data creates exciting new opportunities for developers.
 
 \section{Aims}
 
-In this project I aim to not only explore the technical benefits the SAFE Network provides, but also consider the societal impact such a network could have. For the project I have developed an application that I have called SAFE Wiki. SAFE Wiki aims to provide \textit{permissionless} and decentralised access to Wikipedia, facilitated by storing an archive of it on the SAFE Network. ZIM\cite{zim} is a file format that provides a convenient way to store content that comes from the internet. A ZIM file is a self-contained entity that can hold `copies' of entire websites, such as Wikimedia content, for the purposes of viewing them offline. SAFE Wiki will be able to write the ZIM files to the SAFE Network and then provide the capability for anyone to browse them. 
+The aim of this project is to not only explore the new avenues for software development that the SAFE Network facilitates, but also comment on the societal impact such a network could have. To gain experience in building applications for the SAFE Network an application called SAFE Wiki has been created. SAFE Wiki aims to provide \textit{permissionless} and decentralised access to Wikipedia, facilitated by storing an archive of it on the SAFE Network. ZIM\cite{zim} is a file format that provides a convenient way to store content that comes from the internet. A ZIM file is a self-contained entity that can hold ``copies'' of entire websites, such as Wikimedia content, for the purposes of viewing them offline. SAFE Wiki will be able to write the ZIM files to the SAFE Network and then provide the capability for anyone to browse them. 
 
-Through building the application I hope to explore the architectural and developmental challenges in working with such a new project. With a working product it will then be possible to draw conclusions on whether or not having Wikipedia hosted on the SAFE Network will be useful to people.
+Through building the application a perspective can be gained on the architectural and developmental challenges in working with such a new project. With a working product it will then be possible to draw conclusions on whether or not having Wikipedia hosted on the SAFE Network will be useful to people.
 
 \section{Motivation}
 
 \subsection{Technical Impact}
 
-Traditional software architectures that are commonly associated with the internet, such as client-server, cannot be used with the SAFE Network. Thus different architectural approaches must be taken when building the software that interacts with the network. It is always stimulating to work with new technology and the SAFE Network definitely promises that opportunity. Through this report I hope to not only convey my experience working with the SAFE Network, but also outline any flaws and issues I can see with both adoption and practical usage. This is in combination with exploring the new opportunities the network provides for software development.
+Traditional software architectures that are commonly associated with the internet, such as client-server, cannot be used with the SAFE Network. Thus different architectural approaches must be taken when building the software that interacts with the network. It is always stimulating to work with new technology and the SAFE Network definitely promises that opportunity. This report aims to not only convey the experience of working with the SAFE Network, but also outline any possible flaws and issues with both adoption and practical usage.
 
 \subsection{Cultural Impact}
 
-In my opinion, the right to liberty and the unobstructed access to information is the most important right we have. Throughout history, a common tactic of oppressive governments is to block access to information. By doing this they try to break down a culture. To control people. The most prominent example of this was the Nazi Book Burning Campaign \cite{book-burning}. The goal of this was to destroy any literature or information that could subvert the ideologies that Nazism is built upon.
+The right to liberty and the unobstructed access to information is one of the most important rights a human can have. Throughout history, a common tactic of oppressive governments is to block access to information. By doing this they try to break down a culture or to control people. The most prominent example of this was the Nazi Book Burning Campaign \cite{book-burning}. The goal of this campaign was to destroy any literature or information that could subvert the ideologies that Nazism is built upon.
 
-\citeauthor{doi:10.1177/0165551506075327} propose that a true `Knowledge Society' cannot be achieved without freedom of information\cite{doi:10.1177/0165551506075327}. A `Knowledge Society' is defined by \citeauthor{binde2005towards} in \citetitle{binde2005towards}\cite{binde2005towards} to be a society in which the dissemination of information (knowledge) is open and collaborative. Specifically, the SAFE Network ensures the freedom of access to information. This is why I find the prospect of bringing Wikipedia to the SAFE Network to be such an exciting concept. The benefits to society when citizens are permitted the liberty to seek and consume new ideas cannot be overstated.
+\citeauthor{doi:10.1177/0165551506075327} propose that a true ``Knowledge Society'' cannot be achieved without freedom of information\cite{doi:10.1177/0165551506075327}. A ``Knowledge Society'' is defined by \citeauthor{binde2005towards} in \citetitle{binde2005towards}\cite{binde2005towards} to be a society in which the dissemination of information (knowledge) is open and collaborative. Specifically, the SAFE Network ensures the freedom of access to information. This is a crucial reason why bringing Wikipedia to the SAFE Network makes sense. The benefits to society when citizens are permitted the liberty to seek and consume new ideas cannot be overstated.
 
 \begin{displayquote}
 Article 19, Universal Declaration of Human Rights\cite{assembly1948universal}: \textit{Everyone has the right to freedom of opinion and expression; this right includes freedom to hold opinions without interference and to seek, receive and impart information and ideas through any media and regardless of frontiers.}
